...
      }
    }
  }

  @override
  Widget build(BuildContext context, WidgetRef ref) => Scaffold(
    appBar: AppBar(title: const Text('Your drawings')),
    body: ref
        .watch(projectsProvider)
        .when(
          data: (projects) => projects.isEmpty
              ? const Center(child: Text('Import an image to start a drawing.'))
              : ListView.builder(
...
